Proyecto2/Kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sopesp2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"  # Captura la parte después de /input/
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true" 

spec:
  ingressClassName: nginx
  rules:
    - host: "34.69.146.211.nip.io"
      http:
        paths:
          - path: /input(/|$)(.*)  # Captura todo lo que venga después de /input/
            pathType: ImplementationSpecific
            backend:
              service:
                name: sopesp2-service-rust
                port:
                  number: 8000
